hphp/hack/test/typecheck/inout/bad_inout_use_this.php.exp
File "bad_inout_use_this.php", line 9, characters 13-17:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_this.php", line 9, characters 13-17:
Invalid argument to an inout parameter (Typing[4110])
File "bad_inout_use_this.php", line 9, characters 13-17:
Expected this
File "bad_inout_use_this.php", line 3, characters 18-19:
But got ?C
