hphp/hack/test/typecheck/inout/bad_inout_use_this.php
<?hh // strict

function f(inout ?C $c): void {
  $c = null;
}

class C {
  public function bar(): void {
    f(inout $this);
  }
}
